--- a/src/register.html
+++ b/src/register.html
@@ -22,12 +22,12 @@
 
         <section>
             <div class="input">
-                <form action="#" method="post">
+                <form action="#" method="get">
                     <input type="text" name="user-name" required placeholder="用户名">
                     <input type="email" name="email" required placeholder="E-mail">
                     <input type="password"  name="password" required placeholder="密码">
                     <input type="password" name="confirm-password" required placeholder="重新输入密码">
-                    <input type="submit" value="注册" name="register" onclick="window.location.href='index.html'">
+                    <input type="submit" value="注册" name="register" onclick="window.location.href='../index.html'">
                 </form>
             </div>
         </section>
