--- a/src/collections.html
+++ b/src/collections.html
@@ -22,7 +22,7 @@
                 <button class="dropbtn">用户</button>
                 <div class="dropdown-content">
                     <a class="dropdown-item" href="upload.html"><img src="../images/icon/上传.png" alt="upload">上传</a>
-                    <a class="dropdown-item" href="collections.html"><img src="../images/icon/照片3.png" alt="my photos">我的</a>
+                    <a class="dropdown-item dropdown-this-page" href="collections.html"><img src="../images/icon/照片3.png" alt="my photos">我的</a>
                     <a class="dropdown-item" href="favorites.html"><img src="../images/icon/收藏1.png" alt="likes">收藏</a>
                     <a class="dropdown-item" href="../index.html"><img src="../images/icon/登录.png" alt="log in">登录</a>
                 </div>
@@ -32,7 +32,7 @@
 
     <div class="result">
         <figure>
-            <img src="../images/normal/medium/9494470337.jpg" alt="">
+            <a href="detail-pages.html"><img src="../images/normal/medium/9494470337.jpg" alt="pic1"></a>
             <figcaption>
                 <h2>TITLE</h2>
                 <p>Bonjour! These are some silly words: There should be some details for the whole picture. But actually I dont known what to say.
@@ -42,8 +42,9 @@
                 <input type="button" value="删除" onclick="alert('好的知道了')">
             </figcaption>
         </figure>
+
         <figure>
-            <img src="../images/normal/medium/8646991554.jpg" alt="">
+            <a href="detail-pages.html"><img src="../images/normal/medium/8646991554.jpg" alt="pic2"></a>
             <figcaption>
                 <h2>TITLE</h2>
                 <p>Bonjour! These are some silly words: There should be some details for the whole picture. But actually I dont known what to say.
@@ -53,8 +54,9 @@
                 <input type="button" value="删除" onclick="alert('好的知道了')">
             </figcaption>
         </figure>
+
         <figure>
-            <img src="../images/normal/medium/8152016381.jpg" alt="">
+            <a href="detail-pages.html"><img src="../images/normal/medium/8152016381.jpg" alt="pic3"></a>
             <figcaption>
                 <h2>TITLE</h2>
                 <p>Bonjour! These are some silly words: There should be some details for the whole picture. But actually I dont known what to say.
@@ -64,8 +66,9 @@
                 <input type="button" value="删除" onclick="alert('好的知道了')">
             </figcaption>
         </figure>
+
         <figure>
-            <img src="../images/normal/medium/8152045872.jpg" alt="">
+            <a href="detail-pages.html"><img src="../images/normal/medium/8152045872.jpg" alt="pic4"></a>
             <figcaption>
                 <h2>TITLE</h2>
                 <p>Bonjour! These are some silly words: There should be some details for the whole picture. But actually I dont known what to say.
@@ -75,8 +78,9 @@
                 <input type="button" value="删除" onclick="alert('好的知道了')">
             </figcaption>
         </figure>
+
         <figure>
-            <img src="../images/normal/medium/9504606628.jpg" alt="">
+            <a href="detail-pages.html"><img src="../images/normal/medium/9504606628.jpg" alt="pic5"></a>
             <figcaption>
                 <h2>TITLE</h2>
                 <p>Bonjour! These are some silly words: There should be some details for the whole picture. But actually I dont known what to say.
@@ -86,8 +90,12 @@
                 <input type="button" value="删除" onclick="alert('好的知道了')">
             </figcaption>
         </figure>
+
     </div>
+
     <div class="page">< <span>1</span> 2 3 4 5 ></div>
+
+    <footer><p>备案号：18307110426</p></footer>
 
 </body>
 </html>
