--- a/src/detail-pages.html
+++ b/src/detail-pages.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/detail.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -32,7 +33,7 @@
     <section>
         <figure>
                 <img src="../images/normal/medium/8645912379.jpg" alt="图片">
-                <figcaption>
+                <figcaption><!--             主要信息-->
                     <div>
                         <h2>TITLE</h2>
                         <p class="author">by qqn</p>
@@ -44,7 +45,6 @@
                         <p>主题：风景</p>
                         <p>国家：美国</p>
                         <p>城市：纽约</p>
-
                     </div>
                     <div id="like-button">
                         <input type="button" name="like" value="喜欢" onclick="alert('你真有品味')">
@@ -52,16 +52,15 @@
                 </figcaption>
         </figure>
 
-        <div class="description">
+        <div class="description"><!--             文字描述-->
             <p>Bonjour! These are some silly words: There should be some details for the whole picture. But actually I dont known what to say.
                 Ewwww,this is a beautiful picture,does it? Do you like it? Actually this website has mounts of pictures. Lets explore!
-                Why its so hard to full the whole two lines, hoping I can finally fix this.</p>
+                Why its so hard to full the whole two lines, hoping I can finally fix this.
+            </p>
         </div>
 
     </section>
 
-    <footer>
-        备案号：18307110426
-    </footer>
+    <footer><p>备案号：18307110426</p></footer>
 </body>
 </html>
