--- a/src/favorites.html
+++ b/src/favorites.html
@@ -10,79 +10,86 @@
     <link rel="stylesheet" href="styles/collection.css">
 </head>
 <body>
-<header>
-    <nav>
-        <ul>
-            <li class="logo"><a href="home.html">Jupiter logo</a></li>
-            <li class="nav"><a href=home.html>首页</a></li>
-            <li class="nav"><a href=browser.html>浏览</a></li>
-            <li class="nav"><a href=search.html>搜索</a></li>
-        </ul>
-        <div class="dropdown">
-            <button class="dropbtn">用户</button>
-            <div class="dropdown-content">
-                <a class="dropdown-item" href="upload.html"><img src="../images/icon/上传.png" alt="upload">上传</a>
-                <a class="dropdown-item" href="collections.html"><img src="../images/icon/照片3.png" alt="my photos">我的</a>
-                <a class="dropdown-item" href="favorites.html"><img src="../images/icon/收藏1.png" alt="likes">收藏</a>
-                <a class="dropdown-item" href="../index.html"><img src="../images/icon/登录.png" alt="log in">登录</a>
+    <header>
+        <nav>
+            <ul>
+                <li class="logo"><a href="home.html">Jupiter logo</a></li>
+                <li class="nav"><a href=home.html>首页</a></li>
+                <li class="nav"><a href=browser.html>浏览</a></li>
+                <li class="nav"><a href=search.html>搜索</a></li>
+            </ul>
+            <div class="dropdown">
+                <button class="dropbtn">用户</button>
+                <div class="dropdown-content">
+                    <a class="dropdown-item" href="upload.html"><img src="../images/icon/上传.png" alt="upload">上传</a>
+                    <a class="dropdown-item" href="collections.html"><img src="../images/icon/照片3.png" alt="my photos">我的</a>
+                    <a class="dropdown-item dropdown-this-page" href="favorites.html"><img src="../images/icon/收藏1.png" alt="likes">收藏</a>
+                    <a class="dropdown-item" href="../index.html"><img src="../images/icon/登录.png" alt="log in">登录</a>
+                </div>
             </div>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </header>
+
     <div class="result">
         <figure>
-            <img src="../images/normal/medium/9494470337.jpg" alt="pic1">
+            <a href="detail-pages.html"><img src="../images/normal/medium/9494470337.jpg" alt="pic1"></a>
             <figcaption>
                 <h2>TITLE</h2>
                 <p>Bonjour! These are some silly words: There should be some details for the whole picture. But actually I dont known what to say.
                     Ewwww,this is a beautiful picture,does it? Do you like it? Actually this website has mounts of pictures. Lets explore!
                     Why its so hard to full the whole two lines, hoping I can finally fix this.</p>
-                <p><input class="button" type="button" value="删除"></p>
+                <p><input class="button" type="button" value="删除" onclick="alert('OK 删除了')"></p>
             </figcaption>
         </figure>
+
         <figure>
-            <img src="../images/normal/medium/8646991554.jpg" alt="pic2">
+            <a href="detail-pages.html"><img src="../images/normal/medium/8646991554.jpg" alt="pic2"></a>
             <figcaption>
                 <h2>TITLE</h2>
                 <p>Bonjour! These are some silly words: There should be some details for the whole picture. But actually I dont known what to say.
                     Ewwww,this is a beautiful picture,does it? Do you like it? Actually this website has mounts of pictures. Lets explore!
                     Why its so hard to full the whole two lines, hoping I can finally fix this.</p>
-                <p><input class="button" type="button" value="删除"></p>
+                <p><input class="button" type="button" value="删除" onclick="alert('OK 删除了')"></p>
             </figcaption>
         </figure>
+
         <figure>
-            <img src="../images/normal/medium/8152016381.jpg" alt="pic3">
+            <a href="detail-pages.html"><img src="../images/normal/medium/8152016381.jpg" alt="pic3"></a>
             <figcaption>
                 <h2>TITLE</h2>
                 <p>Bonjour! These are some silly words: There should be some details for the whole picture. But actually I dont known what to say.
                     Ewwww,this is a beautiful picture,does it? Do you like it? Actually this website has mounts of pictures. Lets explore!
                     Why its so hard to full the whole two lines, hoping I can finally fix this.</p>
-                <p><input class="button" type="button" value="删除"></p>
+                <p><input class="button" type="button" value="删除" onclick="alert('OK 删除了')"></p>
             </figcaption>
         </figure>
+
         <figure>
-            <img src="../images/normal/medium/8152045872.jpg" alt="pic4">
+            <a href="detail-pages.html"><img src="../images/normal/medium/8152045872.jpg" alt="pic4"></a>
             <figcaption>
                 <h2>TITLE</h2>
                 <p>Bonjour! These are some silly words: There should be some details for the whole picture. But actually I dont known what to say.
                     Ewwww,this is a beautiful picture,does it? Do you like it? Actually this website has mounts of pictures. Lets explore!
                     Why its so hard to full the whole two lines, hoping I can finally fix this.</p>
-                <p><input class="button" type="button" value="删除"></p>
+                <p><input class="button" type="button" value="删除" onclick="alert('OK 删除了')"></p>
             </figcaption>
         </figure>
+
         <figure>
-            <img src="../images/normal/medium/9504606628.jpg" alt="pic6">
+            <a href="detail-pages.html"><img src="../images/normal/medium/9504606628.jpg" alt="pic5"></a>
             <figcaption>
                 <h2>TITLE</h2>
                 <p>Bonjour! These are some silly words: There should be some details for the whole picture. But actually I dont known what to say.
                     Ewwww,this is a beautiful picture,does it? Do you like it? Actually this website has mounts of pictures. Lets explore!
                     Why its so hard to full the whole two lines, hoping I can finally fix this.</p>
-                <p><input class="button" type="button" value="删除"></p>
+                <p><input class="button" type="button" value="删除" onclick="alert('OK 删除了')"></p>
             </figcaption>
         </figure>
     </div>
+
     <div class="page">< <span>1</span> 2 3 4 5 ></div>
 
+    <footer><p>备案号：18307110426</p></footer>
 
 </body>
 </html>
