--- a/src/search.html
+++ b/src/search.html
@@ -42,7 +42,7 @@
                     </div>
 
                     <div class="radio"><!--             按内容搜索-->
-                        <input class="radio-type" id="radio-2" type="radio" name="search-bar" value="title-search" checked>
+                        <input class="radio-type" id="radio-2" type="radio" name="search-bar" value="title-search">
                         <label for="radio-2" class="radio-label">  标题搜索</label>
                         <textarea name="content-search" cols="auto" rows="5"></textarea>
                     </div>
