--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section>
             <div class="input">
                 <form action="#" method="get">
-                    <input type="text" name="user-name" required placeholder="用户名/常用邮箱登录" aria-placeholder="以字母开始的用户名" pattern="^[a-z]+$" >
+                    <input type="text" name="user-name" required placeholder="用户名/常用邮箱登录" aria-placeholder="以字母开始的用户名">
                     <input type="password"  name="password" required placeholder="密码">
                     <input type="submit" value="登录" name="log-in" onclick="window.location.href='src/home.html'">
                 </form>
